--- a/Portfolio-page/index.html
+++ b/Portfolio-page/index.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Mark Webpage Title</title>
+    <title>Joy Webpage </title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,10 +37,10 @@
         <div class="container">
             
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a>  
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/favicon.png" alt="alternative"></a>  
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Mark</a> -->
+            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">JOY</a> -->
 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h1 class="h1-large">I love to create beautiful and efficient websites</h1>
+                        <h1 class="h1-large">I'm a front-end web developer,I love to create beautiful and efficient websites</h1>
                         <a class="btn-solid-lg page-scroll" href="#about">Discover</a>
                         <a class="btn-outline-lg page-scroll" href="#contact"><i class="fas fa-user"></i>Contact Me</a>
                     </div> <!-- end of text-container -->
@@ -114,13 +114,13 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-container first">
-                        <h2>Hi there I'm Mark,</h2>
+                        <h2>Hi there I'm Joy,</h2>
                         <p>And I love to create beautiful and efficient websites for my customers. I love going through the entire process with the customer from concept, to design and then development and launch</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container second">
-                        <div class="time">2019 - PRESENT</div>
+                        <div class="time">2022 - PRESENT</div>
                         <h6>Freelance Web Developer</h6>
                         <p>Working happily on my own web projects</p>
                         <div class="time">2018 - 2019</div>
@@ -353,7 +353,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-body">
-                            <p class="testimonial-text">“Mark is a skilled developer which will do everything possible to deliver the project on time and I really appreciate that”</p>
+                            <p class="testimonial-text">“Joy is a skilled developer which will do everything possible to deliver the project on time and I really appreciate that”</p>
                             <div class="details">
                                 <img src="images/testimonial-1.jpg" alt="alternative">
                                 <div class="text">
@@ -368,7 +368,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-body">
-                            <p class="testimonial-text">“Loved to work with Mark he's such an awesome developer with great attention to details. He also has a great eye for design”</p>
+                            <p class="testimonial-text">“Loved to work with Joy she's such an awesome developer with great attention to details. She also has a great eye for design”</p>
                             <div class="details">
                                 <img src="images/testimonial-2.jpg" alt="alternative">
                                 <div class="text">
@@ -383,7 +383,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-body">
-                            <p class="testimonial-text">“So glad we started working with Mark. We've used many times his design and development skills for our inhouse online projects”</p>
+                            <p class="testimonial-text">“So glad we started working with Joy. We've used many times her design and development skills for our inhouse online projects”</p>
                             <div class="details">
                                 <img src="images/testimonial-3.jpg" alt="alternative">
                                 <div class="text">
@@ -500,7 +500,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Contact details</h2>
-                    <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="#your-link">contact@domain.com</a></p>
+                    <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="#your-link">Afolagbadejoy8@gmail.com</a></p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -582,7 +582,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a class="no-line" href="#your-link">Your name</a></p>
+                    <p class="p-small">Copyright © <a class="no-line" href="#your-link">Afolagbade Joy</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
@@ -590,7 +590,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Distributed By <a class="no-line" href="https://themewagon.com/">Themewagon</a></p>
+                    <p class="p-small">Distributed By <a class="no-line" href="https://themewagon.com/">Jocinell</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
